syntax = "proto3";

package file;
option go_package = "../../pkg/pb;filegrpc";



message UploadRequest {
    bytes file_chunk = 1;      
    string file_name = 2;      
  }
  

  message UploadResponse {
    string file_name = 1;       
    string message = 2;         
  }